apps/production/memos/route-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: memos-route
  namespace: memos
spec:
  hostnames:
    - memos.fanen.dk
